<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".launch.LaunchFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ballot_logo"
        android:contentDescription="@string/ballot"
        app:layout_constraintBottom_toTopOf="@+id/upcoming_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upcoming_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_elections"
        app:layout_constraintBottom_toTopOf="@+id/representative_button" />

    <Button
        android:id="@+id/representative_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_my_representatives"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
