<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.politcalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/election_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.selectedElection.name}"
            android:textAppearance="?textAppearanceHeadline6"
            app:layout_constraintEnd_toStartOf="@id/end_grid"
            app:layout_constraintStart_toEndOf="@id/start_grid"
            app:layout_constraintTop_toBottomOf="@id/top_grid" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(viewModel.selectedElection.electionDay)}"
            app:layout_constraintEnd_toStartOf="@id/end_grid"
            app:layout_constraintStart_toEndOf="@id/start_grid"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/election_information"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintEnd_toStartOf="@id/end_grid"
            app:layout_constraintStart_toEndOf="@id/start_grid"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/voting_locations"
            app:layout_constraintEnd_toStartOf="@id/end_grid"
            app:layout_constraintStart_toEndOf="@id/start_grid"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ballot_information"
            app:layout_constraintEnd_toStartOf="@id/end_grid"
            app:layout_constraintStart_toEndOf="@id/start_grid"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <Button
            android:id="@+id/follow_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.switchFollowState()}"
            android:text=".followButton}"
            app:followButton="@{viewModel.status}"
            app:layout_constraintEnd_toStartOf="@id/end_grid"
            app:layout_constraintStart_toEndOf="@id/start_grid"
            app:layout_constraintBottom_toBottomOf="@id/bottom_grid" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing_normal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/default_padding" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/default_padding" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>